// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/server/core/domain/proto/model.proto

syntax = "proto3";

package proto;

option go_package = "core/domain/proto";

message RegiserRequest {
  string login = 1;
  string password = 2;
}

message RegisterResponse {
  string jwt = 1;
  string error = 2;
}

message LoginRequest {
  string login = 1;
  string password = 2;
}

message LoginResponse {
  string jwt = 1;
  string error = 2;
}

service User {
  rpc Register(RegiserRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message StorageUnit {
  int32 id = 1;
  string name = 2;
  string value = 3;
  int32 owner = 4;
}

message ReadRecordRequest {
  int32 id = 1;
}

message ReadRecordResponse {
  StorageUnit unit = 1;
  string error = 2;
}

message ReadAllRecordRequest{

}

message ReadAllRecordResponse {
  repeated StorageUnit units = 1;
  string error = 2;
}

message WriteRecordRequest {
  StorageUnit unit = 1;
}

message WriteRecordResponse {
  string error = 1;
}

message DeleteRecordRequest {
  int32 id = 1;
}

message DeleteRecordResponse {
  string error = 1;
}

service Storage {
  rpc ReadRecord(ReadRecordRequest) returns (ReadRecordResponse);
  rpc ReadAllRecord(ReadAllRecordRequest) returns (ReadAllRecordResponse);
  rpc WriteRecord(WriteRecordRequest) returns (WriteRecordResponse);
  rpc DeleteRecord(DeleteRecordRequest) returns (DeleteRecordResponse);
}